--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,11 @@
+#for local
+spring.datasource.url=jdbc:mysql://localhost/mybatis?serverTimezone=GMT%2B8&verifyServerCertificate=false&useSSL=false&requireSSL=false
+spring.datasource.username=root
+spring.datasource.password=123456
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
+
+# 顯示SQL語法
+spring.jpa.show-sql=true
+# format SQL語法
+spring.jpa.properties.hibernate.format_sql=true
