--- a/pom.xml
+++ b/pom.xml
@@ -61,6 +61,14 @@
 			</exclusions>
 		</dependency>
 		
+		<!-- Lombok	-->
+		<dependency>
+			<groupId>org.projectlombok</groupId>
+			<artifactId>lombok</artifactId>
+			<version>1.18.20</version>
+			<scope>provided</scope>
+		</dependency>
+		
 	</dependencies>
 
 	<build>
